# agender

./: .gitignore  Agender.bkl  Agender.cbp  Agender.depend  Agender.desktop  Agender.layout  Agender.nsi  Agender.spec  Agender.spec.in  Agender.xpm  Agender16x16.xpm  AgenderApp.cpp  AgenderApp.h  AgenderCal.cpp  AgenderCal.h  AgenderDnd.cpp  AgenderDnd.h  AgenderIPC.cpp  AgenderIPC.h  AgenderMain.cpp  AgenderMain.h  AgenderPortable.nsi  AgenderTray.cpp  AgenderTray.h  CMakelists.txt  ChangesLog.txt  GNUmakefile  Info.plist  Makefile  PortFile  Readme.txt  agender.lnk  build_osx.sh  configure.in  exclude.txt  update_revision.sh  vcpkg.json  version.h  version.h.in
autopackage/: default.apspec.in
de/: Agender.po
deb/: Agender.dsc.in  debian.control
debian/: agender.dsc  changelog  control
es/: Agender.po
ja/: Agender.po
po/: Agender.pot  ar.po  de.po  el.po  es.po  fr.po  he.po  install_mo.sh  ja.po  pt.po  ro.po  sv.po  zh_CN.po  zh_HK.po
share/: Agender.desktop  Info.plist  agender.lnk
src/: AboutDialog.cpp  AboutDialog.h  Agender-msw.cbp  Agender.cbp  AgenderApp.cpp  AgenderApp.h  AgenderCal.cpp  AgenderCal.h  AgenderDnd.cpp  AgenderDnd.h  AgenderIPC.cpp  AgenderIPC.h  AgenderMain.cpp  AgenderMain.h  AgenderTray.cpp  AgenderTray.h  Makefile  Notifier.cpp  Notifier.h  Updater.cpp  Updater.h  XmlNotes.cpp  XmlNotes.h  agender-msw.cbp  resource.rc  version.h  wxAutoStart.cpp  wxAutoStart.h
trunk/: Agender.bkl  Agender.nsi  Agender.spec.in  GNUmakefile  Readme.txt  build_osx.sh  configure.in  makedist.bat  update_revision.sh
web/: About.elf  About.php  (+22 more)
(+169 files in other folders)
