AC_PREREQ(2.53)
AC_INIT(Agender,1.0.8)
AC_CANONICAL_SYSTEM
AC_PROG_CXX
AC_CHECK_PROG(WX, wx-config, /usr/local/bin/wx-config,yes,no,$PATH)
if [[ "$WX" = "no" ]] ; then
	AC_MSG_ERROR("Could not find wx-config: is wxWidgets installed? is wx-config in your path?")
fi
AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG
DEBUG=0
m4_include(autoconf/bakefile-dllar.m4)
m4_include(autoconf/bakefile-lang.m4)
m4_include(autoconf/bakefile.m4)

AC_BAKEFILE([m4_include(autoconf_inc.m4)])
AC_OUTPUT([Makefile])
